<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoogSMS</string>
    <string name="main_query_lbl_txt">Query:</string>
    <string name="main_type_lbl_txt">Type:</string>
    <string name="main_send_btn_txt">Send via SMS</string>
    <string name="main_sms_sent_txt">Your message was sent.</string>
    <string name="main_query_err_txt">Please enter a query!</string>
    <string name="main_location_err_txt">Please set your location&#8230;</string>
    <string name="default_google_sms">466453</string>
    <string name="about_txt">© 2008&#8211;12 Erik C. Thauvin\nAll Rights Reserved\n\nerik@thauvin.net\nhttp://m.thauvin.net/android/</string>
    <string name="about_menu_txt">About</string>
    <string name="prefs_menu_txt">Preferences</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="prefs_dialog_title">Preferences</string>
    <string name="prefs_location_dialog_title">Set Your Location&#8230;</string>
    <string name="prefs_location_title">Location</string>
    <string name="prefs_location_summary">Your current city and state or zip.</string>
    <string name="prefs_location_hint">e.g.: san francisco ca or 94123</string>
    <string name="prefs_sms_dialog_title">Set SMS Number&#8230;</string>
    <string name="prefs_sms_title">Google SMS</string>
    <string name="prefs_sms_summary">The short code or number of the Google SMS service.</string>
    <string name="prefs_sms_hint">e.g.: 466453</string>
    <string name="prefs_key_sms">prefs_sms</string>
    <string name="prefs_key_loc">prefs_loc</string>

</resources>