<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/prefs_dialog_title">
		<EditTextPreference android:title="@string/prefs_location_title"
			android:summary="@string/prefs_location_summary" android:dialogTitle="@string/prefs_location_dialog_title"
			android:key="@string/prefs_key_loc" android:hint="@string/prefs_location_hint" android:singleLine="true"/>
		<EditTextPreference android:title="@string/prefs_sms_title"
			android:summary="@string/prefs_sms_summary" android:dialogTitle="@string/prefs_sms_dialog_title"
			android:key="@string/prefs_key_sms" android:numeric="integer"
			android:hint="@string/prefs_sms_hint" android:singleLine="true"/>
	</PreferenceCategory>
</PreferenceScreen>